--- a/src/Louvre/ResaBundle/Resources/views/Resa/form.html.twig
+++ b/src/Louvre/ResaBundle/Resources/views/Resa/form.html.twig
@@ -36,48 +36,10 @@
             <div class="tab-pane" role="tabpanel" id="step2">
                 <h3>Etape 2</h3>
                 <p>Données des visiteurs</p>
-                {% form_theme form _self %}
+                {{form_row(form.visiteurs)}}
 
-                {% block _visiteurs_entry_widget %}
-                
-                    <div class="form-group">
-                    
-                        {{form_label(form.visiteurs.vars.prototype.nom, "Nom", {'label_attr': {'class': 'control-label'}}) }}
-                        {{form_errors(form.visiteurs.vars.prototype.nom )}}
-                        {{form_widget(form.visiteurs.vars.prototype.nom)}}
-                    
-                    </div>
-                    
-                    <div class="form-group">
-                    
-                        {{form_label(form.visiteurs.vars.prototype.prenom, "Prénom", {'label_attr': {'class': 'control-label'}}) }}
-                        {{form_errors(form.visiteurs.vars.prototype.prenom )}}
-                        {{form_widget(form.visiteurs.vars.prototype.prenom)}}
-                    
-                    </div>
-                    
-                    <div class="form-group">
-                    
-                        {{form_label(form.visiteurs.vars.prototype.birthday, "Date de naissance", {'label_attr': {'class': 'control-label'}}) }}
-                        {{form_errors(form.visiteurs.vars.prototype.birthday )}}
-                        
-                        <div class="input-group date" id='datetimepicker2'>
-                            
-                            
-                            {{ form_widget(form.visiteurs.vars.prototype.birthday, {'attr': {'class': 'form-control'}}) }}
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar">
-                                    
-                                </span>
-                            </span>
-                        </div>
-                        
-                    </div>
-                
-                
-                {% endblock %}
 
-                {{ form_widget(form.visiteurs) }}
+                
 
                 
 
